<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nm"
        android:textColor="@color/yellow"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/h"
        android:text="@string/v" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40sp"
        android:background="@drawable/bk2"
        android:text="@string/s"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button4"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40sp"
        android:background="@drawable/bk2"
        android:text="@string/r"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnShuffle1"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40sp"
        android:background="@drawable/bk2"
        android:text="@string/q"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/bk2"
        android:text="@string/t"
        android:textSize="30sp" />

</RelativeLayout>