<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello"
        android:textColor="@color/yellow"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnShuffle1"
        android:layout_width="200sp"
        android:layout_height="35sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView1"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="55sp"
        android:layout_marginTop="39sp"
        android:background="@drawable/bk2"
        android:soundEffectsEnabled="true"
        android:text="@string/a"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200sp"
        android:layout_height="35sp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="65dp"
        android:background="@drawable/bk2"
        android:soundEffectsEnabled="true"
        android:text="@string/d"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="60dp"
        android:background="@drawable/bk2"
        android:soundEffectsEnabled="true"
        android:text="@string/c"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200sp"
        android:layout_height="35sp"
        android:layout_alignLeft="@+id/btnShuffle1"
        android:layout_alignRight="@+id/btnShuffle1"
        android:layout_below="@+id/btnShuffle1"
        android:layout_marginTop="45dp"
        android:background="@drawable/bk2"
        android:soundEffectsEnabled="true"
        android:text="@string/b"
        android:textSize="20sp" />

</RelativeLayout>