<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:gravity="top"
    android:orientation="vertical" 
    android:background="@drawable/bk2"
 >

    <Button
        android:id="@+id/btnShuffle1"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/h"
        android:text="@string/v" />

    <TextView
        android:id="@+id/textView90"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24sp"
        android:layout_marginTop="60sp"
        android:text="@string/z"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView90"
        android:layout_marginTop="14sp"
        android:text="@string/ab"
        android:textSize="50sp" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:src="@drawable/backgrey" />

</RelativeLayout>
