<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bk2" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="66dp" ><requestFocus/></EditText>
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="60dp"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:text="@string/m"
        android:textSize="20dp" 
        android:textColor="@color/black"/>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/l"
        android:textSize="20dp"
        android:textColor="@color/black" />
    
    <Button
        android:id="@+id/btnShuffle1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="@drawable/bk2"
        android:text="@string/n" />
      <Button
        android:id="@+id/button2"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/h"
        android:text="@string/v" />

      <ImageButton
          android:id="@+id/ImageButton01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:background="@color/black"
          android:src="@drawable/backgrey" />

</RelativeLayout>