<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView9"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="50dp"
        android:text="@string/m1"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="22dp"
        android:text="@string/m2"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="22dp"
        android:text="@string/m3"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="30sp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="30sp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textView6"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="30sp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="30sp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="60sp"
        android:text="Phone Memory"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnShuffle1"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/h"
        android:text="@string/v" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/m4"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:src="@drawable/backgrey" />

</RelativeLayout>